# air

./: .gitignore  README.md  baseline.py  cos_test_f1.csv  cos_test_loss.csv  cos_train_f1.csv  cos_train_loss.csv  main.py  model.py  plots.py  preprocessing.py  pyproject.toml  spotify_abba_songdata.csv  test_f1.csv  test_loss.csv  train_f1.csv  train_loss.csv
