[tool.poetry]
name = "air"
version = "0.1.0"
description = ""
authors = ["Gaisberger Patrick <patrick.gaisberger@student.tugraz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
torch = "^1.13.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
